# JustRelax

./: .env.example  .gitignore  LICENSE.md  QUICKSTART.md  README.md  UV_MIGRATION.md  app.py  pyproject.toml  render.yaml
static/: robots.txt  sitemap.xml
static/css/: style.css
static/js/: script.js
templates/: 404.html  500.html  index.html
